--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 .sidepanel-section {
-  background-color: white;
+  background-color: whitesmoke;
   color: #222;
   margin-bottom: 20px;
   padding: 20px;
@@ -59,4 +59,11 @@ body {
 
 .slide-down-leave-to {
   transform: translateY(100vh);
+}
+
+.fade-enter-active, .fade-leave-active {
+    transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+    opacity: 0;
 }
